# nnlib

./: .gitignore  CMakeLists.txt  README.md
data/: download.sh
src/: main.cpp
src/loss/: CrossEntropy.cpp  CrossEntropy.h  Loss.h
src/module/: BatchNorm2D.cpp  BatchNorm2D.h  Layer.h  Linear.cpp  Linear.h  ReLU.cpp  ReLU.h  Softmax.cpp  Softmax.h
src/network/: MLP.cpp  MLP.h  Network.h
src/optim/: Optimizer.h  SGD.cpp  SGD.h
